name:           monad-network-instances
version:        0.0.0.1
license:        BSD3
license-file:   LICENSE
maintainer:     Vladimir Sorokin <v.d.sorokin@gmail.com>
synopsis:       Instances MonadConnection for Network & TLS
description:    Instances MonadConnection for Network & TLS
category:       Network, TLS
build-type:     Simple
cabal-version:  >=1.10
homepage:       http://github.com/vladsor/monad-network-instances
bug-reports:    http://github.com/vladsor/monad-network-instances/issues

Library
    default-language: Haskell2010
    build-depends: base
                 , bytestring
                 , tagged-transformer
                 , exceptions
                 , mmorph
                 , mtl
                 , network
                 , vstls
                 , transformers
                 , cryptonite
                 , cprng-aes
                 , monad-network-class
                 , newtype-generics
                 , resourcet
    exposed-modules: Network.Monad.TCP
                   , Network.Monad.TLS
                   , Network.Monad.Tagged.TCP
                   , Network.Monad.Tagged.TLS
    other-modules: Network.Monad.TCP.Internal
                 , Network.Monad.TLS.Internal

    ghc-options: -fwarn-incomplete-patterns -O2 -fprof-auto -funfolding-use-threshold=16 -fprint-potential-instances
